--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,6 @@
 body {
+  width: 1440px;
+  height: 3300px;
   font-family: "Roboto", sans-serif "Raleway", sans-serif;
   color: #434455;
   background: #fff;
@@ -16,7 +18,7 @@ header {
   font-family: Raleway;
   font-size: 18px;
   font-weight: 700;
-  line-height: 21;
+  line-height: 1.2;
   letter-spacing: 0.54px;
   text-transform: uppercase;
 }
@@ -26,7 +28,74 @@ header {
   font-family: Raleway;
   font-size: 18px;
   font-weight: 700;
-  line-height: 21;
+  line-height: 1.2;
   letter-spacing: 0.54px;
   text-transform: uppercase;
+}
+.studio {
+  color: var(--NAVY-BLUE, #2e2f42);
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.32px;
+}
+.portfolio {
+  color: var(--NAVY-BLUE, #2e2f42);
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.32px;
+}
+.contacts {
+  color: var(--NAVY-BLUE, #2e2f42);
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.32px;
+}
+.maill {
+  color: var(--SLATE, #434455);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.32px;
+}
+.phone-number {
+  color: var(--SLATE, #434455);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.32px;
+}
+.dark-bg {
+  width: 1440px;
+  height: 600px;
+  flex-shrink: 0;
+  background: var(--NAVY-BLUE, #2e2f42);
+}
+h1 {
+  width: 496px;
+  color: var(--WHITE, #fff);
+  text-align: center;
+  font-size: 56px;
+  font-weight: 700;
+  line-height: 1.07;
+  letter-spacing: 1.12px;
+}
+.button {
+  display: inline-flex;
+  padding: 16px 32px;
+  align-items: flex-start;
+  gap: 10px;
+  border-radius: 4px;
+  background: var(--IRIS, #4d5ae5);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+}
+.button-text {
+  color: var(--WHITE, #fff);
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.64px;
 }
