--- a/css/styles.css
+++ b/css/styles.css
@@ -144,5 +144,40 @@ p {
   letter-spacing: 0.32px;
 }
 .light-bg {
+  width: 1440px;
+  height: 732px;
+  flex-shrink: 0;
   background: var(--CLOUD, #f4f4fd);
+}
+footer {
+  width: 1440px;
+  height: 312px;
+  flex-shrink: 0;
+  background: var(--NAVY-BLUE, #2e2f42);
+}
+.footer-content {
+  color: var(--CLOUD, #f4f4fd);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.32px;
+}
+.footer-logo {
+  color: var(--CLOUD, #f4f4fd);
+  font-family: Raleway;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 1.16;
+  letter-spacing: 0.54px;
+  text-transform: uppercase;
+}
+.footer-web {
+  width: 44px;
+  color: var(--IRIS, #4d5ae5);
+  font-family: Raleway;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 1.2;
+  letter-spacing: 0.54px;
+  text-transform: uppercase;
 }
