--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,5 @@
 body {
-  width: 1440px;
-  height: 3300px;
-  font-family: "Roboto", sans-serif "Raleway", sans-serif;
+  font-family: "Roboto", sans-serif, "Raleway", sans-serif;
   color: #434455;
   background: #fff;
 }
@@ -13,45 +11,38 @@ a {
   text-decoration: none;
 }
 .logo {
-  color: var(--NAVY-BLUE, #2e2f42);
-  font-family: Raleway;
-  font-size: 18px;
-  font-weight: 700;
-  line-height: 1.2;
-  letter-spacing: 0.54px;
-  text-transform: uppercase;
-}
-.web {
-  width: 44px;
   color: var(--IRIS, #4d5ae5);
   font-family: Raleway;
   font-size: 18px;
   font-weight: 700;
-  line-height: 1.2;
+  line-height: 1.17;
   letter-spacing: 0.54px;
   text-transform: uppercase;
 }
-.studio {
+.logo-studio {
+  color: var(--NAVY-BLUE, #2e2f42);
+  font-family: Raleway;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 1.17;
+  letter-spacing: 0.54px;
+  text-transform: uppercase;
+}
+.nav-list-item {
   color: var(--NAVY-BLUE, #2e2f42);
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.32px;
 }
-.portfolio {
-  color: var(--NAVY-BLUE, #2e2f42);
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 1.5;
-  letter-spacing: 0.32px;
+.nav-list-item:hover {
+  color: var(--OCEAN, #404bbf);
 }
-.contacts {
-  color: var(--NAVY-BLUE, #2e2f42);
-  font-size: 16px;
+.nav-list-item:focus {
+  color: var(--OCEAN, #404bbf);
+}
+.address {
   font-style: normal;
-  font-weight: 500;
-  line-height: 1.5;
-  letter-spacing: 0.32px;
 }
 .maill {
   color: var(--SLATE, #434455);
@@ -68,12 +59,10 @@ a {
   letter-spacing: 0.32px;
 }
 .dark-bg {
-  width: 1440px;
-  height: 600px;
   flex-shrink: 0;
   background: var(--NAVY-BLUE, #2e2f42);
 }
-h1 {
+.h1-title {
   width: 496px;
   color: var(--WHITE, #fff);
   text-align: center;
@@ -83,26 +72,24 @@ h1 {
   letter-spacing: 1.12px;
 }
 .button {
-  display: inline-flex;
-  padding: 16px 32px;
-  align-items: flex-start;
-  gap: 10px;
   border-radius: 4px;
   background: var(--IRIS, #4d5ae5);
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   cursor: pointer;
-}
-.button-text {
   color: var(--WHITE, #fff);
+  font-family: "Roboto", sans-serif;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.64px;
 }
-
+.button:hover {
+  background-color: #404bbf;
+}
+.button:focus {
+  background-color: #404bbf;
+}
 ul {
   list-style-type: none;
-  padding: 0;
   margin: 0;
 }
 .strategy {
@@ -144,14 +131,10 @@ p {
   letter-spacing: 0.32px;
 }
 .light-bg {
-  width: 1440px;
-  height: 732px;
   flex-shrink: 0;
   background: var(--CLOUD, #f4f4fd);
 }
 footer {
-  width: 1440px;
-  height: 312px;
   flex-shrink: 0;
   background: var(--NAVY-BLUE, #2e2f42);
 }
@@ -163,21 +146,20 @@ footer {
   letter-spacing: 0.32px;
 }
 .footer-logo {
+  color: var(--IRIS, #4d5ae5);
+  font-family: "Raleway", sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 1.17;
+  letter-spacing: 0.54px;
+  text-transform: uppercase;
+}
+.footer-studio {
   color: var(--CLOUD, #f4f4fd);
   font-family: Raleway;
   font-size: 18px;
   font-weight: 700;
-  line-height: 1.16;
-  letter-spacing: 0.54px;
-  text-transform: uppercase;
-}
-.footer-web {
-  width: 44px;
-  color: var(--IRIS, #4d5ae5);
-  font-family: Raleway;
-  font-size: 18px;
-  font-weight: 700;
-  line-height: 1.2;
+  line-height: 1.17;
   letter-spacing: 0.54px;
   text-transform: uppercase;
 }
