--- a/css/styles.css
+++ b/css/styles.css
@@ -98,7 +98,7 @@ ul {
   letter-spacing: 0.72px;
   text-transform: capitalize;
 }
-.title-h3 {
+.title-h {
   color: var(--NAVY-BLUE, #2e2f42);
   font-size: 20px;
   font-weight: 500;
