--- a/css/styles.css
+++ b/css/styles.css
@@ -89,7 +89,7 @@ ul {
 .list-item {
   background-color: #ffffff;
 }
-.h2-title {
+.second_level_heading {
   color: var(--NAVY-BLUE, #2e2f42);
   text-align: center;
   font-size: 36px;
